tests/compile-fail/custom_crate_omitted.rs
mod darling {}

#[derive(darling::FromDeriveInput)]
// forgot to specify #[darling(crate = darling)]
pub struct Example {
    ident: Option<syn::Ident>,
}

fn main() {}
