tests/compile-fail/custom_crate_omitted.stderr
error[E0433]: failed to resolve: could not find `FromDeriveInput` in `darling`
 --> tests/compile-fail/custom_crate_omitted.rs:3:19
  |
3 | #[derive(darling::FromDeriveInput)]
  |                   ^^^^^^^^^^^^^^^ could not find `FromDeriveInput` in `darling`
